postprocessor/src/SynthLib2Parser.output
Terminals unused in grammar

   TK_ERROR
   TK_ENUM_LITERAL


Grammar

    0 $accept: start $end

    1 start: Prog
    2      | /* empty */

    3 Prog: SetLogicCmd CmdPlus
    4     | CmdPlus

    5 Symbol: TK_SYMBOL

    6 SetLogicCmd: TK_LPAREN TK_SET_LOGIC Symbol TK_RPAREN

    7 CmdPlus: CmdPlus Cmd
    8        | Cmd

    9 Cmd: FunDefCmd
   10    | FunDeclCmd
   11    | SynthFunCmd
   12    | SynthInvCmd
   13    | CheckSynthCmd
   14    | ConstraintCmd
   15    | InvConstraintCmd
   16    | SortDefCmd
   17    | SetOptsCmd
   18    | VarDeclCmd
   19    | PrimedVarDeclCmd

   20 VarDeclCmd: TK_LPAREN TK_DECLARE_VAR Symbol SortExpr TK_RPAREN

   21 PrimedVarDeclCmd: TK_LPAREN TK_DECLARE_PRIMED_VAR Symbol SortExpr TK_RPAREN

   22 SortDefCmd: TK_LPAREN TK_DEFINE_SORT Symbol SortExpr TK_RPAREN

   23 SortExpr: TK_LPAREN TK_BV IntConst TK_RPAREN
   24         | TK_INT
   25         | TK_BOOL
   26         | TK_REAL
   27         | TK_STRING
   28         | TK_LPAREN TK_ENUM ECList TK_RPAREN
   29         | TK_LPAREN TK_ARRAY SortExpr SortExpr TK_RPAREN
   30         | Symbol

   31 IntConst: TK_INT_LITERAL

   32 BoolConst: TK_BOOL_LITERAL

   33 BVConst: TK_BV_LITERAL

   34 EnumConst: Symbol TK_DOUBLECOLON Symbol

   35 RealConst: TK_REAL_LITERAL

   36 StringConst: TK_STRING_LITERAL

   37 ECList: TK_LPAREN SymbolPlus TK_RPAREN

   38 SymbolPlus: SymbolPlus Symbol
   39           | Symbol

   40 SetOptsCmd: TK_LPAREN TK_SET_OPTIONS OptList TK_RPAREN

   41 OptList: TK_LPAREN SymbolPairPlus TK_RPAREN

   42 SymbolPairPlus: SymbolPairPlus SymbolPair
   43               | SymbolPair

   44 SymbolPair: TK_LPAREN Symbol TK_QUOTED_LITERAL TK_RPAREN

   45 FunDefCmd: TK_LPAREN TK_DEFINE_FUN Symbol ArgList SortExpr Term TK_RPAREN

   46 FunDeclCmd: TK_LPAREN TK_DECLARE_FUN Symbol TK_LPAREN SortStar TK_RPAREN SortExpr TK_RPAREN

   47 SortStar: SortStar SortExpr
   48         | /* empty */

   49 ArgList: TK_LPAREN SymbolSortPairStar TK_RPAREN

   50 SymbolSortPairStar: SymbolSortPairStar SymbolSortPair
   51                   | /* empty */

   52 SymbolSortPair: TK_LPAREN Symbol SortExpr TK_RPAREN

   53 Term: TK_LPAREN Symbol TermStar TK_RPAREN
   54     | Literal
   55     | Symbol
   56     | LetTerm

   57 LetTerm: TK_LPAREN TK_LET TK_LPAREN LetBindingTermPlus TK_RPAREN Term TK_RPAREN

   58 LetBindingTermPlus: LetBindingTermPlus LetBindingTerm
   59                   | LetBindingTerm

   60 LetBindingTerm: TK_LPAREN Symbol SortExpr Term TK_RPAREN

   61 TermStar: TermStar Term
   62         | /* empty */

   63 Literal: IntConst
   64        | BoolConst
   65        | BVConst
   66        | EnumConst
   67        | RealConst
   68        | StringConst

   69 NTDefPlus: NTDefPlus NTDef
   70          | NTDef

   71 NTDef: TK_LPAREN Symbol SortExpr TK_LPAREN GTermPlus TK_RPAREN TK_RPAREN

   72 GTermPlus: GTermPlus GTerm
   73          | GTerm

   74 CheckSynthCmd: TK_LPAREN TK_CHECK_SYNTH TK_RPAREN

   75 ConstraintCmd: TK_LPAREN TK_CONSTRAINT Term TK_RPAREN

   76 InvConstraintCmd: TK_LPAREN TK_INV_CONSTRAINT Symbol Symbol Symbol Symbol TK_RPAREN

   77 SynthFunCmd: TK_LPAREN TK_SYNTH_FUN Symbol ArgList SortExpr TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   78            | TK_LPAREN TK_SYNTH_FUN Symbol ArgList SortExpr TK_RPAREN

   79 SynthInvCmd: TK_LPAREN TK_SYNTH_INV Symbol ArgList TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   80            | TK_LPAREN TK_SYNTH_INV Symbol ArgList TK_RPAREN

   81 GTerm: Symbol
   82      | Literal
   83      | TK_LPAREN Symbol GTermStar TK_RPAREN
   84      | TK_LPAREN TK_CONSTANT SortExpr TK_RPAREN
   85      | TK_LPAREN TK_VARIABLE SortExpr TK_RPAREN
   86      | TK_LPAREN TK_INPUT_VARIABLE SortExpr TK_RPAREN
   87      | TK_LPAREN TK_LOCAL_VARIABLE SortExpr TK_RPAREN
   88      | LetGTerm

   89 LetGTerm: TK_LPAREN TK_LET TK_LPAREN LetBindingGTermPlus TK_RPAREN GTerm TK_RPAREN

   90 LetBindingGTermPlus: LetBindingGTermPlus LetBindingGTerm
   91                    | LetBindingGTerm

   92 LetBindingGTerm: TK_LPAREN Symbol SortExpr GTerm TK_RPAREN

   93 GTermStar: GTermStar GTerm
   94          | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
TK_DEFINE_SORT (258) 22
TK_DEFINE_FUN (259) 45
TK_DECLARE_FUN (260) 46
TK_SET_OPTIONS (261) 40
TK_CHECK_SYNTH (262) 74
TK_SYNTH_FUN (263) 77 78
TK_SYNTH_INV (264) 79 80
TK_DECLARE_VAR (265) 20
TK_DECLARE_PRIMED_VAR (266) 21
TK_LPAREN (267) 6 20 21 22 23 28 29 37 40 41 44 45 46 49 52 53 57 60
    71 74 75 76 77 78 79 80 83 84 85 86 87 89 92
TK_RPAREN (268) 6 20 21 22 23 28 29 37 40 41 44 45 46 49 52 53 57 60
    71 74 75 76 77 78 79 80 83 84 85 86 87 89 92
TK_SET_LOGIC (269) 6
TK_BV (270) 23
TK_INT (271) 24
TK_BOOL (272) 25
TK_ENUM (273) 28
TK_STRING (274) 27
TK_CONSTRAINT (275) 75
TK_INV_CONSTRAINT (276) 76
TK_CONSTANT (277) 84
TK_VARIABLE (278) 85
TK_LOCAL_VARIABLE (279) 87
TK_INPUT_VARIABLE (280) 86
TK_ERROR (281)
TK_DOUBLECOLON (282) 34
TK_LET (283) 57 89
TK_ARRAY (284) 29
TK_REAL (285) 26
TK_INT_LITERAL (286) 31
TK_REAL_LITERAL (287) 35
TK_BOOL_LITERAL (288) 32
TK_ENUM_LITERAL (289)
TK_BV_LITERAL (290) 33
TK_STRING_LITERAL (291) 36
TK_SYMBOL (292) 5
TK_QUOTED_LITERAL (293) 44


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
start (40)
    on left: 1 2, on right: 0
Prog (41)
    on left: 3 4, on right: 1
Symbol (42)
    on left: 5, on right: 6 20 21 22 30 34 38 39 44 45 46 52 53 55
    60 71 76 77 78 79 80 81 83 92
SetLogicCmd (43)
    on left: 6, on right: 3
CmdPlus (44)
    on left: 7 8, on right: 3 4 7
Cmd (45)
    on left: 9 10 11 12 13 14 15 16 17 18 19, on right: 7 8
VarDeclCmd (46)
    on left: 20, on right: 18
PrimedVarDeclCmd (47)
    on left: 21, on right: 19
SortDefCmd (48)
    on left: 22, on right: 16
SortExpr (49)
    on left: 23 24 25 26 27 28 29 30, on right: 20 21 22 29 45 46 47
    52 60 71 77 78 84 85 86 87 92
IntConst (50)
    on left: 31, on right: 23 63
BoolConst (51)
    on left: 32, on right: 64
BVConst (52)
    on left: 33, on right: 65
EnumConst (53)
    on left: 34, on right: 66
RealConst (54)
    on left: 35, on right: 67
StringConst (55)
    on left: 36, on right: 68
ECList (56)
    on left: 37, on right: 28
SymbolPlus (57)
    on left: 38 39, on right: 37 38
SetOptsCmd (58)
    on left: 40, on right: 17
OptList (59)
    on left: 41, on right: 40
SymbolPairPlus (60)
    on left: 42 43, on right: 41 42
SymbolPair (61)
    on left: 44, on right: 42 43
FunDefCmd (62)
    on left: 45, on right: 9
FunDeclCmd (63)
    on left: 46, on right: 10
SortStar (64)
    on left: 47 48, on right: 46 47
ArgList (65)
    on left: 49, on right: 45 77 78 79 80
SymbolSortPairStar (66)
    on left: 50 51, on right: 49 50
SymbolSortPair (67)
    on left: 52, on right: 50
Term (68)
    on left: 53 54 55 56, on right: 45 57 60 61 75
LetTerm (69)
    on left: 57, on right: 56
LetBindingTermPlus (70)
    on left: 58 59, on right: 57 58
LetBindingTerm (71)
    on left: 60, on right: 58 59
TermStar (72)
    on left: 61 62, on right: 53 61
Literal (73)
    on left: 63 64 65 66 67 68, on right: 54 82
NTDefPlus (74)
    on left: 69 70, on right: 69 77 79
NTDef (75)
    on left: 71, on right: 69 70
GTermPlus (76)
    on left: 72 73, on right: 71 72
CheckSynthCmd (77)
    on left: 74, on right: 13
ConstraintCmd (78)
    on left: 75, on right: 14
InvConstraintCmd (79)
    on left: 76, on right: 15
SynthFunCmd (80)
    on left: 77 78, on right: 11
SynthInvCmd (81)
    on left: 79 80, on right: 12
GTerm (82)
    on left: 81 82 83 84 85 86 87 88, on right: 72 73 89 92 93
LetGTerm (83)
    on left: 89, on right: 88
LetBindingGTermPlus (84)
    on left: 90 91, on right: 89 90
LetBindingGTerm (85)
    on left: 92, on right: 90 91
GTermStar (86)
    on left: 93 94, on right: 83 93


State 0

    0 $accept: . start $end

    TK_LPAREN  shift, and go to state 1

    $default  reduce using rule 2 (start)

    start             go to state 2
    Prog              go to state 3
    SetLogicCmd       go to state 4
    CmdPlus           go to state 5
    Cmd               go to state 6
    VarDeclCmd        go to state 7
    PrimedVarDeclCmd  go to state 8
    SortDefCmd        go to state 9
    SetOptsCmd        go to state 10
    FunDefCmd         go to state 11
    FunDeclCmd        go to state 12
    CheckSynthCmd     go to state 13
    ConstraintCmd     go to state 14
    InvConstraintCmd  go to state 15
    SynthFunCmd       go to state 16
    SynthInvCmd       go to state 17


State 1

    6 SetLogicCmd: TK_LPAREN . TK_SET_LOGIC Symbol TK_RPAREN
   20 VarDeclCmd: TK_LPAREN . TK_DECLARE_VAR Symbol SortExpr TK_RPAREN
   21 PrimedVarDeclCmd: TK_LPAREN . TK_DECLARE_PRIMED_VAR Symbol SortExpr TK_RPAREN
   22 SortDefCmd: TK_LPAREN . TK_DEFINE_SORT Symbol SortExpr TK_RPAREN
   40 SetOptsCmd: TK_LPAREN . TK_SET_OPTIONS OptList TK_RPAREN
   45 FunDefCmd: TK_LPAREN . TK_DEFINE_FUN Symbol ArgList SortExpr Term TK_RPAREN
   46 FunDeclCmd: TK_LPAREN . TK_DECLARE_FUN Symbol TK_LPAREN SortStar TK_RPAREN SortExpr TK_RPAREN
   74 CheckSynthCmd: TK_LPAREN . TK_CHECK_SYNTH TK_RPAREN
   75 ConstraintCmd: TK_LPAREN . TK_CONSTRAINT Term TK_RPAREN
   76 InvConstraintCmd: TK_LPAREN . TK_INV_CONSTRAINT Symbol Symbol Symbol Symbol TK_RPAREN
   77 SynthFunCmd: TK_LPAREN . TK_SYNTH_FUN Symbol ArgList SortExpr TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   78            | TK_LPAREN . TK_SYNTH_FUN Symbol ArgList SortExpr TK_RPAREN
   79 SynthInvCmd: TK_LPAREN . TK_SYNTH_INV Symbol ArgList TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   80            | TK_LPAREN . TK_SYNTH_INV Symbol ArgList TK_RPAREN

    TK_DEFINE_SORT         shift, and go to state 18
    TK_DEFINE_FUN          shift, and go to state 19
    TK_DECLARE_FUN         shift, and go to state 20
    TK_SET_OPTIONS         shift, and go to state 21
    TK_CHECK_SYNTH         shift, and go to state 22
    TK_SYNTH_FUN           shift, and go to state 23
    TK_SYNTH_INV           shift, and go to state 24
    TK_DECLARE_VAR         shift, and go to state 25
    TK_DECLARE_PRIMED_VAR  shift, and go to state 26
    TK_SET_LOGIC           shift, and go to state 27
    TK_CONSTRAINT          shift, and go to state 28
    TK_INV_CONSTRAINT      shift, and go to state 29


State 2

    0 $accept: start . $end

    $end  shift, and go to state 30


State 3

    1 start: Prog .

    $default  reduce using rule 1 (start)


State 4

    3 Prog: SetLogicCmd . CmdPlus

    TK_LPAREN  shift, and go to state 31

    CmdPlus           go to state 32
    Cmd               go to state 6
    VarDeclCmd        go to state 7
    PrimedVarDeclCmd  go to state 8
    SortDefCmd        go to state 9
    SetOptsCmd        go to state 10
    FunDefCmd         go to state 11
    FunDeclCmd        go to state 12
    CheckSynthCmd     go to state 13
    ConstraintCmd     go to state 14
    InvConstraintCmd  go to state 15
    SynthFunCmd       go to state 16
    SynthInvCmd       go to state 17


State 5

    4 Prog: CmdPlus .
    7 CmdPlus: CmdPlus . Cmd

    TK_LPAREN  shift, and go to state 31

    $default  reduce using rule 4 (Prog)

    Cmd               go to state 33
    VarDeclCmd        go to state 7
    PrimedVarDeclCmd  go to state 8
    SortDefCmd        go to state 9
    SetOptsCmd        go to state 10
    FunDefCmd         go to state 11
    FunDeclCmd        go to state 12
    CheckSynthCmd     go to state 13
    ConstraintCmd     go to state 14
    InvConstraintCmd  go to state 15
    SynthFunCmd       go to state 16
    SynthInvCmd       go to state 17


State 6

    8 CmdPlus: Cmd .

    $default  reduce using rule 8 (CmdPlus)


State 7

   18 Cmd: VarDeclCmd .

    $default  reduce using rule 18 (Cmd)


State 8

   19 Cmd: PrimedVarDeclCmd .

    $default  reduce using rule 19 (Cmd)


State 9

   16 Cmd: SortDefCmd .

    $default  reduce using rule 16 (Cmd)


State 10

   17 Cmd: SetOptsCmd .

    $default  reduce using rule 17 (Cmd)


State 11

    9 Cmd: FunDefCmd .

    $default  reduce using rule 9 (Cmd)


State 12

   10 Cmd: FunDeclCmd .

    $default  reduce using rule 10 (Cmd)


State 13

   13 Cmd: CheckSynthCmd .

    $default  reduce using rule 13 (Cmd)


State 14

   14 Cmd: ConstraintCmd .

    $default  reduce using rule 14 (Cmd)


State 15

   15 Cmd: InvConstraintCmd .

    $default  reduce using rule 15 (Cmd)


State 16

   11 Cmd: SynthFunCmd .

    $default  reduce using rule 11 (Cmd)


State 17

   12 Cmd: SynthInvCmd .

    $default  reduce using rule 12 (Cmd)


State 18

   22 SortDefCmd: TK_LPAREN TK_DEFINE_SORT . Symbol SortExpr TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 35


State 19

   45 FunDefCmd: TK_LPAREN TK_DEFINE_FUN . Symbol ArgList SortExpr Term TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 36


State 20

   46 FunDeclCmd: TK_LPAREN TK_DECLARE_FUN . Symbol TK_LPAREN SortStar TK_RPAREN SortExpr TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 37


State 21

   40 SetOptsCmd: TK_LPAREN TK_SET_OPTIONS . OptList TK_RPAREN

    TK_LPAREN  shift, and go to state 38

    OptList  go to state 39


State 22

   74 CheckSynthCmd: TK_LPAREN TK_CHECK_SYNTH . TK_RPAREN

    TK_RPAREN  shift, and go to state 40


State 23

   77 SynthFunCmd: TK_LPAREN TK_SYNTH_FUN . Symbol ArgList SortExpr TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   78            | TK_LPAREN TK_SYNTH_FUN . Symbol ArgList SortExpr TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 41


State 24

   79 SynthInvCmd: TK_LPAREN TK_SYNTH_INV . Symbol ArgList TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   80            | TK_LPAREN TK_SYNTH_INV . Symbol ArgList TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 42


State 25

   20 VarDeclCmd: TK_LPAREN TK_DECLARE_VAR . Symbol SortExpr TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 43


State 26

   21 PrimedVarDeclCmd: TK_LPAREN TK_DECLARE_PRIMED_VAR . Symbol SortExpr TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 44


State 27

    6 SetLogicCmd: TK_LPAREN TK_SET_LOGIC . Symbol TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 45


State 28

   75 ConstraintCmd: TK_LPAREN TK_CONSTRAINT . Term TK_RPAREN

    TK_LPAREN          shift, and go to state 46
    TK_INT_LITERAL     shift, and go to state 47
    TK_REAL_LITERAL    shift, and go to state 48
    TK_BOOL_LITERAL    shift, and go to state 49
    TK_BV_LITERAL      shift, and go to state 50
    TK_STRING_LITERAL  shift, and go to state 51
    TK_SYMBOL          shift, and go to state 34

    Symbol       go to state 52
    IntConst     go to state 53
    BoolConst    go to state 54
    BVConst      go to state 55
    EnumConst    go to state 56
    RealConst    go to state 57
    StringConst  go to state 58
    Term         go to state 59
    LetTerm      go to state 60
    Literal      go to state 61


State 29

   76 InvConstraintCmd: TK_LPAREN TK_INV_CONSTRAINT . Symbol Symbol Symbol Symbol TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 62


State 30

    0 $accept: start $end .

    $default  accept


State 31

   20 VarDeclCmd: TK_LPAREN . TK_DECLARE_VAR Symbol SortExpr TK_RPAREN
   21 PrimedVarDeclCmd: TK_LPAREN . TK_DECLARE_PRIMED_VAR Symbol SortExpr TK_RPAREN
   22 SortDefCmd: TK_LPAREN . TK_DEFINE_SORT Symbol SortExpr TK_RPAREN
   40 SetOptsCmd: TK_LPAREN . TK_SET_OPTIONS OptList TK_RPAREN
   45 FunDefCmd: TK_LPAREN . TK_DEFINE_FUN Symbol ArgList SortExpr Term TK_RPAREN
   46 FunDeclCmd: TK_LPAREN . TK_DECLARE_FUN Symbol TK_LPAREN SortStar TK_RPAREN SortExpr TK_RPAREN
   74 CheckSynthCmd: TK_LPAREN . TK_CHECK_SYNTH TK_RPAREN
   75 ConstraintCmd: TK_LPAREN . TK_CONSTRAINT Term TK_RPAREN
   76 InvConstraintCmd: TK_LPAREN . TK_INV_CONSTRAINT Symbol Symbol Symbol Symbol TK_RPAREN
   77 SynthFunCmd: TK_LPAREN . TK_SYNTH_FUN Symbol ArgList SortExpr TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   78            | TK_LPAREN . TK_SYNTH_FUN Symbol ArgList SortExpr TK_RPAREN
   79 SynthInvCmd: TK_LPAREN . TK_SYNTH_INV Symbol ArgList TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   80            | TK_LPAREN . TK_SYNTH_INV Symbol ArgList TK_RPAREN

    TK_DEFINE_SORT         shift, and go to state 18
    TK_DEFINE_FUN          shift, and go to state 19
    TK_DECLARE_FUN         shift, and go to state 20
    TK_SET_OPTIONS         shift, and go to state 21
    TK_CHECK_SYNTH         shift, and go to state 22
    TK_SYNTH_FUN           shift, and go to state 23
    TK_SYNTH_INV           shift, and go to state 24
    TK_DECLARE_VAR         shift, and go to state 25
    TK_DECLARE_PRIMED_VAR  shift, and go to state 26
    TK_CONSTRAINT          shift, and go to state 28
    TK_INV_CONSTRAINT      shift, and go to state 29


State 32

    3 Prog: SetLogicCmd CmdPlus .
    7 CmdPlus: CmdPlus . Cmd

    TK_LPAREN  shift, and go to state 31

    $default  reduce using rule 3 (Prog)

    Cmd               go to state 33
    VarDeclCmd        go to state 7
    PrimedVarDeclCmd  go to state 8
    SortDefCmd        go to state 9
    SetOptsCmd        go to state 10
    FunDefCmd         go to state 11
    FunDeclCmd        go to state 12
    CheckSynthCmd     go to state 13
    ConstraintCmd     go to state 14
    InvConstraintCmd  go to state 15
    SynthFunCmd       go to state 16
    SynthInvCmd       go to state 17


State 33

    7 CmdPlus: CmdPlus Cmd .

    $default  reduce using rule 7 (CmdPlus)


State 34

    5 Symbol: TK_SYMBOL .

    $default  reduce using rule 5 (Symbol)


State 35

   22 SortDefCmd: TK_LPAREN TK_DEFINE_SORT Symbol . SortExpr TK_RPAREN

    TK_LPAREN  shift, and go to state 63
    TK_INT     shift, and go to state 64
    TK_BOOL    shift, and go to state 65
    TK_STRING  shift, and go to state 66
    TK_REAL    shift, and go to state 67
    TK_SYMBOL  shift, and go to state 34

    Symbol    go to state 68
    SortExpr  go to state 69


State 36

   45 FunDefCmd: TK_LPAREN TK_DEFINE_FUN Symbol . ArgList SortExpr Term TK_RPAREN

    TK_LPAREN  shift, and go to state 70

    ArgList  go to state 71


State 37

   46 FunDeclCmd: TK_LPAREN TK_DECLARE_FUN Symbol . TK_LPAREN SortStar TK_RPAREN SortExpr TK_RPAREN

    TK_LPAREN  shift, and go to state 72


State 38

   41 OptList: TK_LPAREN . SymbolPairPlus TK_RPAREN

    TK_LPAREN  shift, and go to state 73

    SymbolPairPlus  go to state 74
    SymbolPair      go to state 75


State 39

   40 SetOptsCmd: TK_LPAREN TK_SET_OPTIONS OptList . TK_RPAREN

    TK_RPAREN  shift, and go to state 76


State 40

   74 CheckSynthCmd: TK_LPAREN TK_CHECK_SYNTH TK_RPAREN .

    $default  reduce using rule 74 (CheckSynthCmd)


State 41

   77 SynthFunCmd: TK_LPAREN TK_SYNTH_FUN Symbol . ArgList SortExpr TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   78            | TK_LPAREN TK_SYNTH_FUN Symbol . ArgList SortExpr TK_RPAREN

    TK_LPAREN  shift, and go to state 70

    ArgList  go to state 77


State 42

   79 SynthInvCmd: TK_LPAREN TK_SYNTH_INV Symbol . ArgList TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   80            | TK_LPAREN TK_SYNTH_INV Symbol . ArgList TK_RPAREN

    TK_LPAREN  shift, and go to state 70

    ArgList  go to state 78


State 43

   20 VarDeclCmd: TK_LPAREN TK_DECLARE_VAR Symbol . SortExpr TK_RPAREN

    TK_LPAREN  shift, and go to state 63
    TK_INT     shift, and go to state 64
    TK_BOOL    shift, and go to state 65
    TK_STRING  shift, and go to state 66
    TK_REAL    shift, and go to state 67
    TK_SYMBOL  shift, and go to state 34

    Symbol    go to state 68
    SortExpr  go to state 79


State 44

   21 PrimedVarDeclCmd: TK_LPAREN TK_DECLARE_PRIMED_VAR Symbol . SortExpr TK_RPAREN

    TK_LPAREN  shift, and go to state 63
    TK_INT     shift, and go to state 64
    TK_BOOL    shift, and go to state 65
    TK_STRING  shift, and go to state 66
    TK_REAL    shift, and go to state 67
    TK_SYMBOL  shift, and go to state 34

    Symbol    go to state 68
    SortExpr  go to state 80


State 45

    6 SetLogicCmd: TK_LPAREN TK_SET_LOGIC Symbol . TK_RPAREN

    TK_RPAREN  shift, and go to state 81


State 46

   53 Term: TK_LPAREN . Symbol TermStar TK_RPAREN
   57 LetTerm: TK_LPAREN . TK_LET TK_LPAREN LetBindingTermPlus TK_RPAREN Term TK_RPAREN

    TK_LET     shift, and go to state 82
    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 83


State 47

   31 IntConst: TK_INT_LITERAL .

    $default  reduce using rule 31 (IntConst)


State 48

   35 RealConst: TK_REAL_LITERAL .

    $default  reduce using rule 35 (RealConst)


State 49

   32 BoolConst: TK_BOOL_LITERAL .

    $default  reduce using rule 32 (BoolConst)


State 50

   33 BVConst: TK_BV_LITERAL .

    $default  reduce using rule 33 (BVConst)


State 51

   36 StringConst: TK_STRING_LITERAL .

    $default  reduce using rule 36 (StringConst)


State 52

   34 EnumConst: Symbol . TK_DOUBLECOLON Symbol
   55 Term: Symbol .

    TK_DOUBLECOLON  shift, and go to state 84

    $default  reduce using rule 55 (Term)


State 53

   63 Literal: IntConst .

    $default  reduce using rule 63 (Literal)


State 54

   64 Literal: BoolConst .

    $default  reduce using rule 64 (Literal)


State 55

   65 Literal: BVConst .

    $default  reduce using rule 65 (Literal)


State 56

   66 Literal: EnumConst .

    $default  reduce using rule 66 (Literal)


State 57

   67 Literal: RealConst .

    $default  reduce using rule 67 (Literal)


State 58

   68 Literal: StringConst .

    $default  reduce using rule 68 (Literal)


State 59

   75 ConstraintCmd: TK_LPAREN TK_CONSTRAINT Term . TK_RPAREN

    TK_RPAREN  shift, and go to state 85


State 60

   56 Term: LetTerm .

    $default  reduce using rule 56 (Term)


State 61

   54 Term: Literal .

    $default  reduce using rule 54 (Term)


State 62

   76 InvConstraintCmd: TK_LPAREN TK_INV_CONSTRAINT Symbol . Symbol Symbol Symbol TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 86


State 63

   23 SortExpr: TK_LPAREN . TK_BV IntConst TK_RPAREN
   28         | TK_LPAREN . TK_ENUM ECList TK_RPAREN
   29         | TK_LPAREN . TK_ARRAY SortExpr SortExpr TK_RPAREN

    TK_BV     shift, and go to state 87
    TK_ENUM   shift, and go to state 88
    TK_ARRAY  shift, and go to state 89


State 64

   24 SortExpr: TK_INT .

    $default  reduce using rule 24 (SortExpr)


State 65

   25 SortExpr: TK_BOOL .

    $default  reduce using rule 25 (SortExpr)


State 66

   27 SortExpr: TK_STRING .

    $default  reduce using rule 27 (SortExpr)


State 67

   26 SortExpr: TK_REAL .

    $default  reduce using rule 26 (SortExpr)


State 68

   30 SortExpr: Symbol .

    $default  reduce using rule 30 (SortExpr)


State 69

   22 SortDefCmd: TK_LPAREN TK_DEFINE_SORT Symbol SortExpr . TK_RPAREN

    TK_RPAREN  shift, and go to state 90


State 70

   49 ArgList: TK_LPAREN . SymbolSortPairStar TK_RPAREN

    $default  reduce using rule 51 (SymbolSortPairStar)

    SymbolSortPairStar  go to state 91


State 71

   45 FunDefCmd: TK_LPAREN TK_DEFINE_FUN Symbol ArgList . SortExpr Term TK_RPAREN

    TK_LPAREN  shift, and go to state 63
    TK_INT     shift, and go to state 64
    TK_BOOL    shift, and go to state 65
    TK_STRING  shift, and go to state 66
    TK_REAL    shift, and go to state 67
    TK_SYMBOL  shift, and go to state 34

    Symbol    go to state 68
    SortExpr  go to state 92


State 72

   46 FunDeclCmd: TK_LPAREN TK_DECLARE_FUN Symbol TK_LPAREN . SortStar TK_RPAREN SortExpr TK_RPAREN

    $default  reduce using rule 48 (SortStar)

    SortStar  go to state 93


State 73

   44 SymbolPair: TK_LPAREN . Symbol TK_QUOTED_LITERAL TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 94


State 74

   41 OptList: TK_LPAREN SymbolPairPlus . TK_RPAREN
   42 SymbolPairPlus: SymbolPairPlus . SymbolPair

    TK_LPAREN  shift, and go to state 73
    TK_RPAREN  shift, and go to state 95

    SymbolPair  go to state 96


State 75

   43 SymbolPairPlus: SymbolPair .

    $default  reduce using rule 43 (SymbolPairPlus)


State 76

   40 SetOptsCmd: TK_LPAREN TK_SET_OPTIONS OptList TK_RPAREN .

    $default  reduce using rule 40 (SetOptsCmd)


State 77

   77 SynthFunCmd: TK_LPAREN TK_SYNTH_FUN Symbol ArgList . SortExpr TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   78            | TK_LPAREN TK_SYNTH_FUN Symbol ArgList . SortExpr TK_RPAREN

    TK_LPAREN  shift, and go to state 63
    TK_INT     shift, and go to state 64
    TK_BOOL    shift, and go to state 65
    TK_STRING  shift, and go to state 66
    TK_REAL    shift, and go to state 67
    TK_SYMBOL  shift, and go to state 34

    Symbol    go to state 68
    SortExpr  go to state 97


State 78

   79 SynthInvCmd: TK_LPAREN TK_SYNTH_INV Symbol ArgList . TK_LPAREN NTDefPlus TK_RPAREN TK_RPAREN
   80            | TK_LPAREN TK_SYNTH_INV Symbol ArgList . TK_RPAREN

    TK_LPAREN  shift, and go to state 98
    TK_RPAREN  shift, and go to state 99


State 79

   20 VarDeclCmd: TK_LPAREN TK_DECLARE_VAR Symbol SortExpr . TK_RPAREN

    TK_RPAREN  shift, and go to state 100


State 80

   21 PrimedVarDeclCmd: TK_LPAREN TK_DECLARE_PRIMED_VAR Symbol SortExpr . TK_RPAREN

    TK_RPAREN  shift, and go to state 101


State 81

    6 SetLogicCmd: TK_LPAREN TK_SET_LOGIC Symbol TK_RPAREN .

    $default  reduce using rule 6 (SetLogicCmd)


State 82

   57 LetTerm: TK_LPAREN TK_LET . TK_LPAREN LetBindingTermPlus TK_RPAREN Term TK_RPAREN

    TK_LPAREN  shift, and go to state 102


State 83

   53 Term: TK_LPAREN Symbol . TermStar TK_RPAREN

    $default  reduce using rule 62 (TermStar)

    TermStar  go to state 103


State 84

   34 EnumConst: Symbol TK_DOUBLECOLON . Symbol

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 104


State 85

   75 ConstraintCmd: TK_LPAREN TK_CONSTRAINT Term TK_RPAREN .

    $default  reduce using rule 75 (ConstraintCmd)


State 86

   76 InvConstraintCmd: TK_LPAREN TK_INV_CONSTRAINT Symbol Symbol . Symbol Symbol TK_RPAREN

    TK_SYMBOL  shift, and go to state 34

    Symbol  go to state 105


State 87

   23 SortExpr: TK_LPAREN TK_BV . IntConst TK_RPAREN

    TK_INT_LITERAL  shift, and go to state 47

    IntConst  go to state 106


State 88

   28 SortExpr: TK_LPAREN TK_ENUM . ECList TK_RPAREN

    TK_LPAREN  shift, and go to state 107

    ECList  go to state 108


State 89

   29 SortExpr: TK_LPAREN TK_ARRAY . SortExpr SortExpr TK_RPAREN

    TK_LPAREN  shift, and go to state 63
    TK_INT     shift, and go to state 64
    TK_BOOL    shift, and go to state 65
    TK_STRING  shift, and go to state 66
    TK_REAL    shift, and go to state 67
    TK_SYMBOL  shift, and go to state 34

    Symbol    go to state 68
    SortExpr  go to state 109


State 90

   22 SortDefCmd: TK_LPAREN TK_DEFINE_SORT Symbol SortExpr TK_RPAREN .

    $default  reduce using rule 22 (SortDefCmd)


State 91

   49 ArgList: TK_LPAREN SymbolSortPairStar . TK_RPAREN
   50 SymbolSortPairStar: SymbolSortPairStar . SymbolSortPair

    TK_LPAREN  shift, and go to state 110
    TK_RPAREN  shift, and go to state 111

    SymbolSortPair  go to state 112


State 92

   45 FunDefCmd: TK_LPAREN TK_DEFINE_FUN Symbol ArgList SortExpr . Term TK_RPAREN
